fixed dark mode and full screen

--- a/mdv10/src/toast.css
+++ b/mdv10/src/toast.css
@@ -9,7 +9,10 @@
 .toastui-editor-contents, div[contenteditable]{
   font-size: 17px;
 }
-
+/* add opacity in dark mode */
+.toastui-editor-dark .toastui-editor-contents,.toastui-editor-dark div[contenteditable]{
+  opacity: 70%;
+}
 .toastui-editor-contents pre{
   overflow: auto;
 }
